--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1337,7 +1337,7 @@ footer.main {
           #experiences nav.tabs ul li.selected span.close-tab, #experiences .exp-labels ul li.selected span.close-tab {
             position: absolute;
             top: 12px;
-            right: 0;
+            right: -10px;
             font-size: 25px;
             color: rgba(255, 255, 255, 0.5); }
             #experiences nav.tabs ul li.selected span.close-tab:hover, #experiences .exp-labels ul li.selected span.close-tab:hover {
@@ -1413,7 +1413,8 @@ footer.main {
   #experiences .exp-labels {
     z-index: 1; }
     #experiences .exp-labels ul {
-      list-style: none; }
+      list-style: none;
+      position: relative; }
       #experiences .exp-labels ul li {
         width: 260px;
         height: 140px;
@@ -1466,7 +1467,8 @@ ul#gallery-images {
   top: 0;
   display: inline-block;
   z-index: 1;
-  zoom: 1; }
+  zoom: 1;
+  -webkit-backface-visibility: hidden; }
   ul#gallery-images li {
     width: 940px;
     float: left; }
